# cluster_management_MCP

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  pytest.ini
.github/workflows/: test.yml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatWindow.tsx
src/cluster_management_MCP/core/: mcp_instance.py
src/cluster_management_MCP/scripts/: api_server.py  cluster_manager.py  launch_backend.sh  launch_cluster.py  spark_mcp_server.py
src/cluster_management_MCP/utils/: cli_tools.py  cluster_health_tools.py  config.py  helpers.py  kafka_tools.py  mcp_tools.py  observability.py  risk_tools.py  spark_tools.py  system_prompts.py  tool_helpers.py
tests/: conftest.py  test_cli_tools.py  test_cluster_health.py  test_filetree_tools.py
